CS59_Intellij/tests/invalid/exprparens.dsl
/* invalid: parenthesis not supported in expressions */
num = 32487 + (87239 / 1374).